--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,4 +36,14 @@ hysr_pam_install = 'hysr_install.pam_install:run'
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-
+[[tool.mypy.overrides]]
+module = [
+    "context",
+    "pam_models",
+    "pam_interface",
+    "pam_mujoco",
+    "o80",
+    "o80_pam",
+    "shared_memory",
+]
+ignore_missing_imports = true
