--- a/mypy.ini
+++ b/mypy.ini
@@ -21,3 +21,5 @@ ignore_missing_imports = True
 [mypy-shared_memory.*]
 ignore_missing_imports = True
 
+[mypy-nptyping.*]
+ignore_missing_imports = True
