--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ Sphinx = "^4.5.0"
 breathe = "^4.33.1"
 matplotlib = "^3.5.2"
 h5py = "^3.6.0"
+nptyping = "^2.0.1"
 nose = "^1.3.7"
 importlib = "^1.0.4"
 
@@ -35,4 +36,14 @@ hysr_pam_install = 'hysr_install.pam_install:run'
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-
+[[tool.mypy.overrides]]
+module = [
+    "context",
+    "pam_models",
+    "pam_interface",
+    "pam_mujoco",
+    "o80",
+    "o80_pam",
+    "shared_memory",
+]
+ignore_missing_imports = true
