--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ Sphinx = "^4.5.0"
 breathe = "^4.33.1"
 matplotlib = "^3.5.2"
 h5py = "^3.6.0"
-nptyping = "^2.0.1"
+nptyping = "2.0.1"
 nose = "^1.3.7"
 
 [tool.poetry.scripts]
