--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ matplotlib = "^3.5.2"
 h5py = "^3.6.0"
 nptyping = "2.0.1"
 nose = "^1.3.7"
+toml = "^0.10.2"
+types-toml = "^0.10.7"
 
 [tool.poetry.scripts]
 hysr_pam_install = 'hysr_install.pam_install:run'
